--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,15 @@
 @tailwind utilities;
 
 html, body, #root {
-    height:100%
+    height:100%;
+    -webkit-tap-highlight-color: transparent;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+    background-color: #202a1f;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #ff8427;
+    border-radius: 5px;
 }
